--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,16 @@
-<p>contact works!</p>
+<div class="contact-container">
+    <form action="" class="contact-left">
+        <div class="contact-left-title">
+            <h2>Contact me</h2>
+        </div>
+        <input type="text" name="name" placeholder="Name" class="contact-inputs" required>
+        <input type="email" name="email" placeholder="email@example.com" class="contact-inputs" required>
+        <textarea name="message" placeholder="Type your message here" class="contact-inputs" cols="30" rows="10" required></textarea>
+        <button type="submit">Submit your message</button>
+    </form>
+    <!-- <form action="" class="contact-rigth">
+        <div class="contact-left-rigth">
+
+        </div>
+    </form> -->
+</div>
