Implemented about me component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,13 @@
-<div>
-    <h1>about works!</h1>
+<div class="flex-container">
+    <div class="container-left">
+        <img src="assets/images/Photo.png">
+    </div>
+    <div class="container-rigth">
+        <h1 class="title-about-me">Hi, I'm Gabriel.</h1>
+        <p class="about-me-text">
+        I am a dedicated Software Engineer with a strong passion for Automotive Embedded Systems, specializing in C programming, the AUTOSAR standard, and Diagnostics. My focus is on delivering robust and reliable solutions that drive innovation in the automotive industry.
+        In addition to my work in embedded systems, I am a versatile Full Stack Developer. I have deep expertise in front-end development using the Angular framework and JavaScript/TypeScript, and I excel in backend development with the Spring Boot framework and Java. This combination allows me to build scalable, end-to-end applications that meet complex technical requirements.
+        I also have a solid background in Android development, where I use Java and Android Studio to create user-friendly mobile applications. Driven by a commitment to lifelong learning, I continually seek to expand my skills and stay ahead of the latest trends and technologies in software development.
+        </p>
+    </div>
 </div>
