Implemented Shopping list project section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,9 +5,10 @@
     <div class="container-rigth">
         <h1 class="title-about-me">Hi, I'm Gabriel.</h1>
         <p class="about-me-text">
-        I am a dedicated Software Engineer with a strong passion for Automotive Embedded Systems, specializing in C programming, the AUTOSAR standard, and Diagnostics. My focus is on delivering robust and reliable solutions that drive innovation in the automotive industry.
-        In addition to my work in embedded systems, I am a versatile Full Stack Developer. I have deep expertise in front-end development using the Angular framework and JavaScript/TypeScript, and I excel in backend development with the Spring Boot framework and Java. This combination allows me to build scalable, end-to-end applications that meet complex technical requirements.
-        I also have a solid background in Android development, where I use Java and Android Studio to create user-friendly mobile applications. Driven by a commitment to lifelong learning, I continually seek to expand my skills and stay ahead of the latest trends and technologies in software development.
+            I am a dedicated Software Engineer with a strong passion for Automotive Embedded Systems, specializing in C programming, the AUTOSAR (AUTomotive Open System ARchitecture), and Diagnostics Stack (Dem, Dcm, NvM).
+            My focus is on delivering robust and reliable solutions that drive innovation in the automotive industry.
+            In addition to my work in embedded systems, I am a versatile Full Stack Developer. I have deep expertise in front-end development using the Angular framework with JavaScript/TypeScript, and I excel in backend development with the Spring Boot framework with Java. This combination allows me to build scalable, end-to-end applications that meet complex technical requirements. I also have a solid background in Android development, where I use Java and Android Studio to create user-friendly mobile applications.
+            I hold a Bachelor's degree in Computer Engineering from the University of Genoa, and I am currently enrolled at the Technical University of Denmark (DTU), where I am pursuing an MSc in Computer Science and Engineering. Driven by a commitment to lifelong learning, I continually seek to expand my skills and stay ahead of the latest trends and technologies in software development.
         </p>
     </div>
 </div>
