--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-
+<div class="wrapper">
+    <div class="home-container">
+        <div class="header-line1">
+            Hello, I'm <span>Gabriel</span>
+        </div>
+        <div class="header-line1">
+            I'm a Software Engineer
+        </div>
+        <a href="../about">About me</a>
+    </div>
+</div>
