--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,11 +4,10 @@
     </div>
     <div class="container-rigth">
         <h1 class="title-about-me">Hi, I'm Gabriel.</h1>
-        <p class="about-me-text">
-            I am a dedicated Software Engineer with a strong passion for Automotive Embedded Systems, specializing in C programming, the AUTOSAR (AUTomotive Open System ARchitecture), and Diagnostics Stack (Dem, Dcm, NvM).
-            My focus is on delivering robust and reliable solutions that drive innovation in the automotive industry.
-            In addition to my work in embedded systems, I am a versatile Full Stack Developer. I have deep expertise in front-end development using the Angular framework with JavaScript/TypeScript, and I excel in backend development with the Spring Boot framework with Java. This combination allows me to build scalable, end-to-end applications that meet complex technical requirements. I also have a solid background in Android development, where I use Java and Android Studio to create user-friendly mobile applications.
-            I hold a Bachelor's degree in Computer Engineering from the University of Genoa, and I am currently enrolled at the Technical University of Denmark (DTU), where I am pursuing an MSc in Computer Science and Engineering. Driven by a commitment to lifelong learning, I continually seek to expand my skills and stay ahead of the latest trends and technologies in software development.
-        </p>
+        <p class="about-me-text">   
+            I’m a passionate Software Engineer with a strong background in Automotive Embedded Systems. My expertise includes C programming, AUTOSAR (Automotive Open System Architecture), the Diagnostics Stack (Dem, Dcm, NvM) and real-time systems, essential for ensuring precise timing and reliability in automotive applications.<br>
+            In addition to my embedded systems experience, I’m a versatile Full Stack Developer. I work with Angular, JavaScript, and TypeScript for front-end development, and Spring Boot with Java for back-end solutions. This allows me to build complete, scalable applications that address complex technical challenges.<br>
+            I also have experience in mobile app development using Java and Android Studio for Android Application and Swift and Xcode for IOs Applications, creating intuitive and engaging mobile applications.<br>
+            I hold a Bachelor’s degree in Computer Engineering from the University of Genoa and am pursuing a Master’s degree in Computer Science and Engineering at the Technical University of Denmark (DTU). Committed to continuous learning, I am always eager to expand my skills and stay updated with the latest technological advancements.
     </div>
 </div>
