--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -26,7 +26,7 @@ span:hover{
 }
 
 .custom-class{
-    margin: 10px; /* Add margin to create space around the header */
+    margin: 10px;
     background-color:transparent;
     border-color: transparent;
     
