--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
         <div class="header-line1">
             I'm a Software Engineer
         </div>
-        <a href="../about">About me</a>
+        <a class="home-aboutme" href="../about">About me</a>
+        <a class="download-cv" href="assets/Gabriel_Buchila_CV" download="Gabriel_Buchila_CV.pdf">Download CV</a>
     </div>
 </div>
