--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,11 +1,38 @@
-      .flex-container {
-      display: flex; /* Enables Flexbox layout */
-      justify-content: space-between; /* Optional: Adds space between the boxes */
+    body{
+      display: flexbox;
+    }
+    
+    .flex-container {
+      display: flex; 
+      flex-wrap: wrap; 
+      justify-content: space-between; 
       margin-top: 60px;
     }
-      .container-rigth {
-      flex: 1; /* Each box takes equal space */
-      margin: 10px; /* Optional: Adds space between the boxes */
+
+    .first-project-container{
+      display: flex; 
+      flex-wrap: wrap; 
+      justify-content: space-between; 
+      margin-top: 60px;
+    }
+
+    .second-project-container{
+      display: flex; 
+      flex-wrap: wrap; 
+      justify-content: space-between; 
+      margin-top: 60px;
+      margin-bottom: 100px;
+    }
+
+    .third-project-container{
+      display: flex; 
+      flex-wrap: wrap; 
+      justify-content: space-between; 
+    }
+
+    .container-rigth {
+      flex: 1; 
+      margin: 10px; 
       padding: 20px;
     }
   
@@ -40,6 +67,7 @@
       width: 130px;
       color:rgb(60, 255, 0) ;
     }
+    
 
     //slideshow css
 
@@ -50,22 +78,38 @@
       }
       
       .slide-wrapper {
-        max-width: 100%; /* Ensure the image scales well */
-        width: 370px;  /* Set the desired width */
-        height: 500px; /* Set the desired height */
-        overflow: hidden; /* Hide parts of the image that exceed the container */
+        max-width: 100%; 
+        width: 370px;  
+        height: 500px; 
+        overflow: hidden; 
         display: flex;
-        align-items: center; /* Center the image vertically */
-        justify-content: center; /* Center the image horizontally */
-        background-color: #f0f0f0; /* Optional: background color to show the container's edges */
+        align-items: center; 
+        justify-content: center; 
         border-radius: 20px;
+      }
+      .second-slide-wrapper{
+        max-width: 100%; 
+        width: 370px;  
+        height: 500px; 
+        overflow: hidden; 
+        display: flex;
+        align-items: center; 
+        justify-content: center; 
+        border-radius: 20px;
+      }
+
+      .second-slide {
+        max-width: 100%; 
+        height: auto; 
+        position: relative;
+        top: +10%;
       }
       
       .slide {
-        max-width: 100%; /* Ensure the image scales well */
-        height: auto; /* Maintain aspect ratio for width */
+        max-width: 100%; 
+        height: auto; 
         position: relative;
-        top: +30%; /* Shift the image upwards to crop the top half */
+        top: +30%;
       }
       
       .prev, .next {
