--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,10 +10,10 @@
 }
 
 .nav span:hover{
-    color: #aba3a3; 
+    color: rgb(60, 255, 0);; 
 }
 .nav a:hover {
-    color: #aba3a3;
+    color: rgb(60, 255, 0);;
 }
 
 span {
@@ -22,13 +22,14 @@ span {
 }
 
 span:hover{
-    color: #aba3a3;
+    color: rgb(60, 255, 0);
 }
 
 .custom-class{
     margin: 10px;
     background-color:transparent;
     border-color: transparent;
+    margin-bottom: 10px;
     
 }
 
