--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,39 +1,24 @@
-.wrapper {
+body{
+    display: flexbox;
+  }
+
+.home-wrapper{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; 
+    justify-content: center; /* Horizontally centers the content */
+    align-items: center;    /* Vertically centers the content */
+    min-height: 60vh; /* Ensure enough height to center the content */
 }
 
 .home-container {
-    display: flex;
+    display: flex; 
+    flex-wrap: wrap; 
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%; 
-    max-width: 600px; 
-    padding: 20px;
-    text-align: center;
+    margin-top: 80px;
     font-size: 50px;
+    justify-content: center;
 }
 
-@media (max-width: 768px) {
-    .home-container {
-        font-size: 30px;
-        width: 90%;
-    }
-}
-
-@media (max-width: 480px) {
-    .home-container {
-        font-size: 20px; 
-        width: 100%;
-    }
-}
 
 .home-aboutme{
     display:flex;
