--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,16 +4,9 @@
   </a>
 
   <ul class="nav nav-pills custom-nav-class">
-<<<<<<< Updated upstream
-    <li class="nav-item"><a href="../home" class="nav-link">Home</a></li>
-    <li class="nav-item"><a href="../projects" class="nav-link">Projects</a></li>
-    <li class="nav-item"><a href="../about" class="nav-link">About</a></li>
-    <li class="nav-item"><a href="../contact" class="nav-link">Contact</a></li>
-=======
-    <li class="nav-item"><a [routerLink]="['/home']"     class="nav-link">Home</a></li>
-    <li class="nav-item"><a [routerLink]="['/projects']" class="nav-link">Projects</a></li>
-    <li class="nav-item"><a [routerLink]="['/about']"    class="nav-link">About</a></li>
-    <li class="nav-item"><a [routerLink]="['/contact']"  class="nav-link">Contact</a></li>
->>>>>>> Stashed changes
+    <li class="nav-item"><a [routerLink]="['/home']"  routerLinkActive="active" class="nav-link">Home</a></li>
+    <li class="nav-item"><a [routerLink]="['/projects']" routerLinkActive="active" class="nav-link">Projects</a></li>
+    <li class="nav-item"><a [routerLink]="['/about']" routerLinkActive="active" class="nav-link">About</a></li>
+    <li class="nav-item"><a [routerLink]="['/contact']" routerLinkActive="active" class="nav-link">Contact</a></li>
    </ul>
   </header>
